# wasm-pack-web-template

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
